--- a/GrowFlow_Phoenix/appsettings.json
+++ b/GrowFlow_Phoenix/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "profiles": {
+    "GrowFlow_Phoenix": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+
     }
   },
-  "AllowedHosts": "*"
+  "LeviathanCreds": {
+    "ApiUser": "CHALLENGEUSER",
+    "ApiKey": "CHALLENGEKEY"
+  },
+  "LeviathanApi": {
+    "BaseURL": "https://leviathan.challenge.growflow.com",
+    //"BaseURL": "https://leviathan.challenge.growflow.com/customer/?ApiUser=CHALLENGEUSER&ApiKey=CHALLENGEKEY" for testing purposes
+  }
 }
