--- a/GrowFlow_Phoenix/Properties/launchSettings.json
+++ b/GrowFlow_Phoenix/Properties/launchSettings.json
@@ -13,7 +13,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7105;http://localhost:5295",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
