- Reorganized leviathan details to be pulled from appsettings.json centrally - Completed Phoenix Employee records syncing from Leviathan at creation - Reorganized folder structure for clarity - Cleaned up Leviathan API request types

--- a/GrowFlow_Phoenix/appsettings.json
+++ b/GrowFlow_Phoenix/appsettings.json
@@ -1,4 +1,5 @@
 {
+  //This file is left public, to testing ease only.
   "profiles": {
     "GrowFlow_Phoenix": {
       "commandName": "Project",
@@ -12,12 +13,22 @@
 
     }
   },
-  "LeviathanCreds": {
-    "ApiUser": "CHALLENGEUSER",
-    "ApiKey": "CHALLENGEKEY"
-  },
   "LeviathanApi": {
     "BaseURL": "https://leviathan.challenge.growflow.com",
-    //"BaseURL": "https://leviathan.challenge.growflow.com/customer/?ApiUser=CHALLENGEUSER&ApiKey=CHALLENGEKEY" for testing purposes
+    "ProviderName": "Leviathan",
+    "Endpoints": {
+      "EmployeeEndpoint": "/employee",
+      "CustomerEndpoint": "/customer"
+    },
+    "Credentials": {
+      "User": {
+        "Param": "ApiUser",
+        "Value": "CHALLENGEUSER"
+      },
+      "Key": {
+        "Param": "ApiKey",
+        "Value": "CHALLENGEKEY"
+      }
+    }
   }
 }
