Refactor Leviathan sync flow and normalize external ID handling
- Renamed internal DB snapshot collection
- Finalized local persistence and automatic sync with Leviathan
- Added auto-retry upload to Leviathan
- Normalized external ID handling and updated EmployeeService accordingly
- Removed Leviathan sync responsibilities from EmployeeService
- Moved LastSyncedAt from Employee to ExternalId child entity
- Introduced LeviathanSyncManager to decouple shared sync logic
- Added cancellation tokens to all async methods
- Improved local Leviathan response testing via appsettings toggle
- Replaced BusinessEquals with IEmployeeComparable interface
- Fixed non-nullable property warnings
- Cleaned up formatting, comments, and ignored local test files

--- a/GrowFlow_Phoenix/appsettings.json
+++ b/GrowFlow_Phoenix/appsettings.json
@@ -1,5 +1,5 @@
 {
-  //This file is left public, to testing ease only.
+  //This file is only left public to simplify testing.
   "profiles": {
     "GrowFlow_Phoenix": {
       "commandName": "Project",
@@ -10,7 +10,6 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-
     }
   },
   "LeviathanApi": {
@@ -29,6 +28,15 @@
         "Param": "ApiKey",
         "Value": "CHALLENGEKEY"
       }
+    },
+    "Settings": {
+      /* Setting UseLocalResponse to False, configures project to make real API calls to Leviathan. Setting it to True uses local text files for testing instead of making actual API calls. 
+      How to use: 
+      1. Set this to false initially, to create a local text file, containing a real Leviathan API response.
+      2. Send a Create employee request to Phoenix (POST /employee) using Swagger UI or Postman.
+      3. Send a Get employee request to Phoenix (GET /employee/}) using Swagger UI or Postman.
+      */
+      "UseLocalResponse": true
     }
   }
 }
