Fix LeviathanEmployeeCache mapping, clean up DTO validation, and update cache logic
- Ignore Id property in mapper when mapping LeviathanEmployeeCache to Employee
- Remove unnecessary [Required] attributes on DTOs
- Silence compiler warnings for non-nullable DTO properties
- Add custom JSON attribute to enforce non-empty, non-whitespace Phoenix DTO fields
- Remove redundant comparison before updating LeviathanEmployeeCache in background service

--- a/GrowFlow_Phoenix/appsettings.json
+++ b/GrowFlow_Phoenix/appsettings.json
@@ -36,7 +36,7 @@
       2. Send a Create employee request to Phoenix (POST /employee) using Swagger UI or Postman.
       3. Send a Get employee request to Phoenix (GET /employee/}) using Swagger UI or Postman.
       */
-      "UseLocalResponse": true
+      "UseLocalResponse": false
     }
   }
 }
